--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,13 @@ body {
   font-size: 14px;
 }
 
+/* test */
+/* :hover,
+:focus {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+} */
+
 /* ================Общие классы================ */
 /* HEADER */
 .page-header {
@@ -102,10 +109,16 @@ body {
   margin-right: 50px;
 }
 
-.menu-item::after {
-  display: inline-block;
+.menu-item {
+}
+
+.menu-link.current::after {
   position: absolute;
-  width: 48px;
+  content: "";
+  display: flex;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   height: 4px;
   background: #2196f3;
   border-radius: 2px;
@@ -114,12 +127,15 @@ body {
 .menu-link {
   color: var(--second-accent-color);
   padding: 32px 0;
-  display: block;
+  display: flex;
+  position: relative;
 }
 
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-tel-container {
@@ -291,8 +307,34 @@ body {
   align-items: center;
 }
 
+.command-item {
+  position: relative;
+}
+
 .command-item:not(:last-child) {
   margin-right: 30px;
+}
+
+.command-item-wraper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background: rgba(47, 48, 58, 0.8);
+  height: 70px;
+  width: 100%;
+  bottom: 0%;
+  left: 0%;
+}
+
+.text-wraper {
+  display: flex;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--background-accent-color);
 }
 
 /* Наша команда */
@@ -568,6 +610,35 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
+}
+
+.work-list-blok {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  color: var(--background-accent-color);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  padding: 63px 23px;
+  overflow: auto;
+  transform: translate(0, 100%);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-list:hover .overlay {
+  transform: translate(0, 0);
 }
 
 .work-element-name {
