--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@
   --background-accent-color: #ffffff;
   --background-second-color: #2f303a;
   --fill-color: #afb1b8;
+  --speed: 250ms ;
+  --cubic: cubic-bezier(0.4, 0, 0.2, 1)
+
 }
 
 h1,
@@ -113,29 +116,32 @@ body {
 }
 
 .menu-link.current::after {
-  position: absolute;
   content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
   display: flex;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 4px;
   background: #2196f3;
   border-radius: 2px;
 }
 
 .menu-link {
-  color: var(--second-accent-color);
+  position: relative;
   padding: 32px 0;
   display: flex;
-  position: relative;
+  color: var(--second-accent-color);
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
+
 }
 
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .address-tel-container {
@@ -156,6 +162,8 @@ body {
   padding: 32px 0;
   display: flex;
   align-items: center;
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .social-icon-header {
@@ -179,6 +187,8 @@ body {
   color: var(--accent-text-color);
   padding: 32px 0;
   display: flex;
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .phone-number:hover,
@@ -225,6 +235,8 @@ body {
   font-family: inherit;
   border: none;
   border-radius: 4px;
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .main-button:hover,
@@ -315,16 +327,17 @@ body {
   margin-right: 30px;
 }
 
-.command-item-wraper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.command-item-wraper { 
   position: absolute;
-  background: rgba(47, 48, 58, 0.8);
   height: 70px;
   width: 100%;
   bottom: 0%;
   left: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(47, 48, 58, 0.8);
+  
 }
 
 .text-wraper {
@@ -398,6 +411,7 @@ body {
   justify-content: center;
   gap: 10px;
   margin-top: 16px;
+  
 }
 
 .social-list-link {
@@ -408,10 +422,14 @@ body {
   height: 44px;
   border-radius: 50%;
   background-color: rgb(255, 255, 255);
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .social-list-icon {
   fill: var(--fill-color);
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .social-list-link:hover,
@@ -458,6 +476,8 @@ body {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: var(--fill-color);
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 .clients-list-link:hover {
   fill: #188ce8;
@@ -538,6 +558,8 @@ body {
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .social-list-icon-footer {
@@ -576,6 +598,8 @@ body {
   border-radius: 4px;
   padding: 6px 22px;
   margin-right: 8px;
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 /* Плиточные елементы */
 .container {
@@ -619,22 +643,23 @@ body {
 
 .overlay {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
   color: var(--background-accent-color);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+
   background: rgba(33, 150, 243, 0.9);
   padding: 63px 23px;
   overflow: auto;
   transform: translate(0, 100%);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .work-list:hover .overlay {
@@ -683,6 +708,8 @@ body {
   color: var(--accent-text-color);
   margin-right: 50px;
   display: block;
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .mail-address-portfolio:hover,
@@ -697,6 +724,8 @@ body {
   letter-spacing: 0.02em;
   color: var(--accent-text-color);
   display: block;
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
 }
 
 .phone-number-portfolio:hover,
@@ -717,3 +746,66 @@ body {
   color: var(--background-accent-color);
   background: var(--accent-color);
 }
+
+/* MODAL */
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal{
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 528px;
+height: 581px;
+background-color: var(--background-accent-color);
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+}
+
+.modal-close-button{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  padding: 0;
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
+
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus{
+border-color: var(--accent-color);
+}
+
+.modal-close-button-icon{
+  transition-duration: var(--speed);
+  transition-timing-function: var(--cubic);
+}
+
+.modal-close-button:hover .modal-close-button-icon,
+.modal-close-button:focus .modal-close-button-icon{
+fill: var(--accent-color);
+}
+
