--- a/css/styles.css
+++ b/css/styles.css
@@ -568,6 +568,47 @@ body {
 .social-list-link:focus {
   background-color: var(--accent-color);
 }
+
+.footer-subscribe{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: var(--background-accent-color);
+  margin-left: 93px;
+}
+
+.form-email{
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  margin-top: 20px;
+  margin-left: 93px;
+}
+
+.button-send-footer{
+  display: flex;
+align-items: center;
+justify-content: center;
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.06em;
+  width: 200px;
+  height: 50px;
+  background-color: var(--accent-color);
+  color: var(--background-accent-color);
+}
+
+.icon-send{
+  margin-left: 10px;
+}
+
+
 /* ================PORTFOLIO================ */
 
 /* Main */
@@ -807,3 +848,9 @@ border-color: var(--accent-color);
 fill: var(--accent-color);
 }
 
+.label{
+position: absolute;
+display: flex;
+padding-top: 200px;
+padding-left: 400px;
+}
