--- a/css/styles.css
+++ b/css/styles.css
@@ -829,6 +829,7 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding: 40px;
 }
 
 .modal-close-button {
@@ -859,4 +860,15 @@ body {
 .modal-close-button:hover .modal-close-button-icon,
 .modal-close-button:focus .modal-close-button-icon {
   fill: var(--accent-color);
+}
+
+/* MODAL FORM  */
+.modal-form{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.modal-form-input{
+  width: 100%;
 }
