--- a/css/styles.css
+++ b/css/styles.css
@@ -592,7 +592,8 @@ body {
 }
 
 .form-email:focus {
-  border-color: var(--background-accent-color);
+  outline: none;
+  border-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -863,12 +864,68 @@ body {
 }
 
 /* MODAL FORM  */
-.modal-form{
-  display: flex;
-  flex-direction: column;
 
+.modal-form-text {
+  display: block;
+  text-align: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  margin-top: 2px;
+  margin-bottom: 12px;
 }
 
-.modal-form-input{
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-input {
   width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  transition: border-color var(--speed) var(--cubic);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: var(--accent-color);
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
+}
+
+.modal-form-input-desc {
+  display: block;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1, 17;
+  letter-spacing: 0.01em;
+  color: var(--accent-text-color);
+  margin-bottom: 4px;
+}
+
+.modal-form-input-wrapper {
+  display: block;
+  position: relative;
+}
+
+.modal-form-input-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  transition: fill var(--speed) var(--cubic);
 }
