--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --background-accent-color: #ffffff;
   --background-second-color: #2f303a;
   --fill-color: #afb1b8;
+  --background-accent-button: #188ce8;
   --speed: 250ms;
   --cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -233,7 +234,7 @@ body {
 
 .main-button:hover,
 .main-button:focus {
-  background-color: #188ce8;
+  background-color: var(--background-accent-button);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -468,7 +469,7 @@ body {
     border-color var(--speed) var(--cubic);
 }
 .clients-list-link:hover {
-  fill: #188ce8;
+  fill: var(--background-accent-button);
   border-color: #2196f3;
 }
 
@@ -624,7 +625,7 @@ body {
 
 .button-send-footer:hover,
 .button-send-footer:focus {
-  background-color: #188ce8;
+  background-color: var(--background-accent-button);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -928,4 +929,53 @@ body {
   left: 15px;
   transform: translateY(-50%);
   transition: fill var(--speed) var(--cubic);
+}
+
+.modal-form-message {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  transition: border-color var(--speed) var(--cubic);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-form-message::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-message:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.modal-form-submit {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  width: 200px;
+  height: 50px;
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: background-color var(--speed) var(--cubic);
+  color: var(--background-accent-color);
+  border: none;
+}
+
+.modal-form-submit:focus,
+.modal-form-submit:hover {
+  background-color: var(--background-accent-button);
+}
+
+.modal-form-check-desc::before {
+  display: block;
+  width: 16px;
+  height: 15px;
+  content: "";
+  border: 1px solid var(--second-accent-color);
+  border-radius: 2px;
 }
