--- a/css/styles.css
+++ b/css/styles.css
@@ -971,6 +971,19 @@ body {
   background-color: var(--background-accent-button);
 }
 
+.modal-form-check-desc{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+}
+
 .modal-form-check-desc::before {
   display: block;
   width: 16px;
@@ -978,4 +991,44 @@ body {
   content: "";
   border: 1px solid var(--second-accent-color);
   border-radius: 2px;
+  margin-right: 7px;
+}
+
+.modal-form-check:checked + .modal-form-check-desc::before{
+background-color: var(--accent-color);
+background-image: url(../images/icon-check.svg);
+background-size: contain;
+border: none;
+}
+
+
+.modal-form-check:focus + .modal-form-check-desc::before{
+  outline: 2px solid var(--accent-color);
+  border: none;
+}
+
+.checkbox{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.modal-form-submit{
+  align-self: center;
+  margin-top: 30px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  min-width: 200px;
+  height: 50px;
+  background: var(--accent-color);
+  color: var(--background-accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  padding: 10px 29px;
+  transition: background-color var(--speed) var(--cubic);
 }
